tests/compile-fail/handler-registered-twice.stderr
error[E0499]: cannot borrow `*int0` as mutable more than once at a time
  --> $DIR/handler-registered-twice.rs:26:41
   |
25 |         scope.register(Interrupt::INT0, int0);
   |                                         ---- first mutable borrow occurs here
26 |         scope.register(Interrupt::INT1, int0);
   |               --------                  ^^^^ second mutable borrow occurs here
   |               |
   |               first borrow later used by call
